--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@react-three/fiber": "^9.1.2",
     "@tanstack/react-query": "^5.56.2",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/stats.js": "^0.17.4",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -59,11 +60,13 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.53.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.12.7",
     "sonner": "^1.7.4",
+    "stats.js": "^0.17.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
